@@ -1,6 +1,6 @@
 # generate-exceptions: generate C++ files for Xapian's exception hierarchy.
 #
-# Copyright (C) 2003,2004,2006,2007,2008,2009,2011,2012,2013,2014 Olly Betts
+# Copyright (C) 2003,2004,2006,2007,2008,2009,2011,2012,2013,2014,2015 Olly Betts
 # Copyright (C) 2007 Richard Boulton
 #
 # This program is free software; you can redistribute it and/or
@@ -88,8 +88,8 @@ class XAPIAN_VISIBILITY_DEFAULT Error {
      *
      *  If no value is associated, this member variable will be 0.
      *
-     *  On UNIX, if this value is < 0, it's a negated h_errno value (giving
-     *  an error from gethostbyname() or similar).
+     *  On UNIX, if this value is < 0, it's an error code returned from
+     *  getaddrinfo() (negated if such error codes are positive).
      *
      *  On Windows, if this value is < 0, it's a negated Windows error code
      *  (as given by GetLastError()), while if it is >= WSABASEERR then it is a
