@@ -2,7 +2,7 @@
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2004,2005,2006,2007,2008,2010,2012,2013 Olly Betts
+ * Copyright 2004,2005,2006,2007,2008,2010,2012,2013,2015 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -23,12 +23,14 @@
 #include <config.h>
 
 #include "remoteconnection.h"
+#include "str.h"
 #include "tcpclient.h"
 #include <xapian/error.h>
 
 #include "realtime.h"
 #include "safeerrno.h"
 #include "safefcntl.h"
+#include "safenetdb.h"
 #include "safesysselect.h"
 #include "safesyssocket.h"
 #include "socket_utils.h"
@@ -36,7 +38,6 @@
 #include <cmath>
 #include <cstring>
 #ifndef __WIN32__
-# include "safenetdb.h"
 # include <netinet/in.h>
 # include <netinet/tcp.h>
 #endif
@@ -47,127 +48,141 @@ int
 TcpClient::open_socket(const std::string & hostname, int port,
 		       double timeout_connect, bool tcp_nodelay)
 {
-    // FIXME: timeout on gethostbyname() ?
-    struct hostent *host = gethostbyname(hostname.c_str());
+    struct addrinfo hints;
+    memset(&hints, 0, sizeof(struct addrinfo));
+    hints.ai_family = AF_INET;
+    hints.ai_socktype = SOCK_STREAM;
+    hints.ai_flags = AI_ADDRCONFIG | AI_NUMERICSERV;
+    hints.ai_protocol = 0;
 
-    if (host == 0) {
-	throw Xapian::NetworkError(std::string("Couldn't resolve host ") + hostname,
-#ifdef __WIN32__
-		socket_errno()
-#else
-		// "socket_errno()" is just errno on UNIX which is
-		// inappropriate here - if gethostbyname() returns NULL an
-		// error code is available in h_errno (with values
-		// incompatible with errno).  On Linux at least, if h_errno
-		// is < 0, then the error code *IS* in errno!
-		(h_errno < 0 ? errno : -h_errno)
-#endif
-		);
+    struct addrinfo *result;
+    int s = getaddrinfo(hostname.c_str(), str(port).c_str(), &hints, &result);
+    if (s != 0) {
+	throw Xapian::NetworkError("Couldn't resolve host " + hostname,
+				   eai_to_xapian(s));
     }
 
-    int socketfd = socket(PF_INET, SOCK_STREAM|SOCK_CLOEXEC, 0);
-    if (socketfd < 0) {
-	throw Xapian::NetworkError("Couldn't create socket", socket_errno());
-    }
+    int connect_errno = 0;
+    int socketfd = -1;
+    for (struct addrinfo * rp = result; rp != NULL; rp = rp->ai_next) {
+	int socktype = rp->ai_socktype | SOCK_CLOEXEC;
+	int fd = socket(rp->ai_family, socktype, rp->ai_protocol);
+	if (fd == -1)
+	    continue;
+
 #if !defined __WIN32__ && defined F_SETFD && defined FD_CLOEXEC
-    // We can't use a preprocessor check on the *value* of SOCK_CLOEXEC as on
-    // Linux SOCK_CLOEXEC is an enum, with '#define SOCK_CLOEXEC SOCK_CLOEXEC'
-    // to allow '#ifdef SOCK_CLOEXEC' to work.
-    if (SOCK_CLOEXEC == 0)
-	(void)fcntl(socketfd, F_SETFD, FD_CLOEXEC);
+	// We can't use a preprocessor check on the *value* of SOCK_CLOEXEC as
+	// on Linux SOCK_CLOEXEC is an enum, with '#define SOCK_CLOEXEC
+	// SOCK_CLOEXEC' to allow '#ifdef SOCK_CLOEXEC' to work.
+	if (SOCK_CLOEXEC == 0)
+	    (void)fcntl(fd, F_SETFD, FD_CLOEXEC);
 #endif
 
-    struct sockaddr_in remaddr;
-    memset(&remaddr, 0, sizeof(remaddr));
-    remaddr.sin_family = AF_INET;
-    remaddr.sin_port = htons(port);
-    memcpy(&remaddr.sin_addr, host->h_addr, host->h_length);
-
 #ifdef __WIN32__
-    ULONG enabled = 1;
-    int rc = ioctlsocket(socketfd, FIONBIO, &enabled);
+	ULONG enabled = 1;
+	int rc = ioctlsocket(fd, FIONBIO, &enabled);
 #define FLAG_NAME "FIONBIO"
 #elif defined O_NONBLOCK
-    int rc = fcntl(socketfd, F_SETFL, O_NONBLOCK);
+	int rc = fcntl(fd, F_SETFL, O_NONBLOCK);
 #define FLAG_NAME "O_NONBLOCK"
 #else
-    int rc = fcntl(socketfd, F_SETFL, O_NDELAY);
+	int rc = fcntl(fd, F_SETFL, O_NDELAY);
 #define FLAG_NAME "O_NDELAY"
 #endif
-    if (rc < 0) {
-	int saved_errno = socket_errno(); // note down in case close hits an error
-	close_fd_or_socket(socketfd);
-	throw Xapian::NetworkError("Couldn't set "FLAG_NAME, saved_errno);
+	if (rc < 0) {
+	    int saved_errno = socket_errno(); // note down in case close hits an error
+	    close_fd_or_socket(fd);
+	    freeaddrinfo(result);
+	    throw Xapian::NetworkError("Couldn't set "FLAG_NAME, saved_errno);
 #undef FLAG_NAME
-    }
-
-    if (tcp_nodelay) {
-	int optval = 1;
-	// 4th argument might need to be void* or char* - cast it to char*
-	// since C++ allows implicit conversion to void* but not from void*.
-	if (setsockopt(socketfd, IPPROTO_TCP, TCP_NODELAY,
-		       reinterpret_cast<char *>(&optval),
-		       sizeof(optval)) < 0) {
-	    int saved_errno = socket_errno(); // note down in case close hits an error
-	    close_fd_or_socket(socketfd);
-	    throw Xapian::NetworkError("Couldn't set TCP_NODELAY", saved_errno);
 	}
-    }
 
-    int retval = connect(socketfd, reinterpret_cast<sockaddr *>(&remaddr),
-			 sizeof(remaddr));
+	if (tcp_nodelay) {
+	    int optval = 1;
+	    // 4th argument might need to be void* or char* - cast it to char*
+	    // since C++ allows implicit conversion to void* but not from
+	    // void*.
+	    if (setsockopt(fd, IPPROTO_TCP, TCP_NODELAY,
+			   reinterpret_cast<char *>(&optval),
+			   sizeof(optval)) < 0) {
+		int saved_errno = socket_errno(); // note down in case close hits an error
+		close_fd_or_socket(fd);
+		freeaddrinfo(result);
+		throw Xapian::NetworkError("Couldn't set TCP_NODELAY", saved_errno);
+	    }
+	}
 
-    if (retval < 0) {
+	int retval = connect(fd, rp->ai_addr, rp->ai_addrlen);
+	if (retval == 0) {
+	    socketfd = fd;
+	    break;
+	}
+
+	int err = socket_errno();
+	if (
 #ifdef __WIN32__
-	if (WSAGetLastError() != WSAEWOULDBLOCK) {
+	    WSAGetLastError() == WSAEWOULDBLOCK
 #else
-	if (socket_errno() != EINPROGRESS) {
+	    err == EINPROGRESS
 #endif
-	    int saved_errno = socket_errno(); // note down in case close hits an error
-	    close_fd_or_socket(socketfd);
-	    throw Xapian::NetworkError("Couldn't connect (1)", saved_errno);
+	    ) {
+	    // Wait for the socket to be writable, with a timeout.
+	    fd_set fdset;
+	    FD_ZERO(&fdset);
+	    FD_SET(fd, &fdset);
+
+	    do {
+		// FIXME: Reduce the timeout if we retry on EINTR.
+		struct timeval tv;
+		RealTime::to_timeval(timeout_connect, &tv);
+		retval = select(fd + 1, 0, &fdset, &fdset, &tv);
+	    } while (retval < 0 && errno == EINTR);
+
+	    if (retval <= 0) {
+		int saved_errno = errno;
+		close_fd_or_socket(fd);
+		freeaddrinfo(result);
+		if (retval < 0)
+		    throw Xapian::NetworkError("Couldn't connect (select() on socket failed)",
+					       saved_errno);
+		throw Xapian::NetworkTimeoutError("Timed out waiting to connect", ETIMEDOUT);
+	    }
+
+	    err = 0;
+	    SOCKLEN_T len = sizeof(err);
+
+	    // 4th argument might need to be void* or char* - cast it to char*
+	    // since C++ allows implicit conversion to void* but not from void*.
+	    retval = getsockopt(fd, SOL_SOCKET, SO_ERROR,
+				reinterpret_cast<char *>(&err), &len);
+
+	    if (retval < 0) {
+		int saved_errno = socket_errno(); // note down in case close hits an error
+		close_fd_or_socket(fd);
+		freeaddrinfo(result);
+		throw Xapian::NetworkError("Couldn't get socket options", saved_errno);
+	    }
+	    if (err == 0) {
+		// Connected successfully.
+		socketfd = fd;
+		break;
+	    }
 	}
 
-	// wait for input to be available.
-	fd_set fdset;
-	FD_ZERO(&fdset);
-	FD_SET(socketfd, &fdset);
+	// Note down the error code for the first address we try, which seems
+	// likely to be more helpful than the last in the case where they
+	// differ.
+	if (connect_errno == 0)
+	    connect_errno = err;
 
-	do {
-	    // FIXME: Reduce the timeout if we retry on EINTR.
-	    struct timeval tv;
-	    RealTime::to_timeval(timeout_connect, &tv);
-	    retval = select(socketfd + 1, 0, &fdset, &fdset, &tv);
-	} while (retval < 0 && errno == EINTR);
+	// Failed to connect.
+	CLOSESOCKET(fd);
+    }
 
-	if (retval < 0) {
-	    int saved_errno = errno;
-	    close_fd_or_socket(socketfd);
-	    throw Xapian::NetworkError("Couldn't connect (2)", saved_errno);
-	}
+    freeaddrinfo(result);
 
-	if (retval <= 0) {
-	    close_fd_or_socket(socketfd);
-	    throw Xapian::NetworkTimeoutError("Timed out waiting to connect", ETIMEDOUT);
-	}
-
-	int err = 0;
-	SOCKLEN_T len = sizeof(err);
-
-	// 4th argument might need to be void* or char* - cast it to char*
-	// since C++ allows implicit conversion to void* but not from void*.
-	retval = getsockopt(socketfd, SOL_SOCKET, SO_ERROR,
-			    reinterpret_cast<char *>(&err), &len);
-
-	if (retval < 0) {
-	    int saved_errno = socket_errno(); // note down in case close hits an error
-	    close_fd_or_socket(socketfd);
-	    throw Xapian::NetworkError("Couldn't get socket options", saved_errno);
-	}
-	if (err) {
-	    close_fd_or_socket(socketfd);
-	    throw Xapian::NetworkError("Couldn't connect (3)", err);
-	}
+    if (socketfd == -1) {
+	throw Xapian::NetworkError("Couldn't connect", connect_errno);
     }
 
 #ifdef __WIN32__
